--- a/components/sass/modules/_contaceMe.scss
+++ b/components/sass/modules/_contaceMe.scss
@@ -1,12 +1,19 @@
 section#contactMe {
     padding-top: 40px;
-    border-bottom: solid 1px $borderGray;
     @include clearfix;
+
+    @include breakpoint(max-width $phoneLandscape) {
+        padding-top: 20px;
+    }
 
     @include sectionHeader;
     
     article.content {
         margin-bottom: 40px;
+
+        @include breakpoint(max-width $phoneLandscape) {
+            margin-bottom: 20px;
+        }
 
         form {
             label {
