--- a/components/sass/modules/_globalStyles.scss
+++ b/components/sass/modules/_globalStyles.scss
@@ -49,3 +49,12 @@ a.backToTop {
         font-size: 24px;
     }
 }//backToTop
+
+.hide {
+    display: none !important;
+    width: 0 !important;
+    height: 0 !important;
+    overflow:  hidden !important;
+    shadow: none;
+    border: none;
+}
