--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -22,4 +22,5 @@
 @import "modules/portfolio";
 @import "modules/contaceMe";
 @import "modules/projectDetails";
+@import "modules/thanks";
 @import "modules/footer";
