--- a/components/sass/modules/_globalStyles.scss
+++ b/components/sass/modules/_globalStyles.scss
@@ -15,8 +15,10 @@ img {
     color: $white;
     max-width: 100%;
     height: auto;
-    display: inline-block;
+    // display: inline-block;
     vertical-align: middle; 
+    display: block;
+    margin: auto;
 }
 
 a.backToTop {
